[package]
name = "macroquad_vs_notan"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.5"
notan = "0.12.0"

[[bin]]
name = "macroquad"
path = "src/macroquad.rs"

[[bin]]
name = "notan"
path = "src/notan.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"                    # abort on panic!()
lto = true                      # enable link time optimization
strip = true                    # strip debug symbols
codegen-units = 1               # use a single codegen-unit for better optimizations
